<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/back_icon"></ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical">

        <com.vibescom.kutanga.View.PMTextView
            android:id="@+id/tv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:textAllCaps="true"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/_30sdp"
            android:gravity="center_horizontal"/>
        <com.vibescom.kutanga.View.PMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create your account"
            android:textColor="@color/dim_grey"
            android:textSize="@dimen/_10sdp"
            android:layout_marginTop="-14dp"
            android:gravity="center_horizontal"/>
        <com.vibescom.kutanga.View.PMEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:hint="@string/username"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:inputType="text"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>
        <com.vibescom.kutanga.View.PMEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/email"
            android:textColorHint="@color/grey"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:drawablePadding="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>
        <com.vibescom.kutanga.View.PMEditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp" />
        <com.vibescom.kutanga.View.PMEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:hint="@string/phone"
            android:layout_marginTop="@dimen/_10sdp"
            android:inputType="phone"
            android:paddingStart="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_12sdp" />
        <com.vibescom.kutanga.View.PMTextView
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/g_shadow"
            android:layout_marginTop="@dimen/_30sdp"
            android:textAllCaps="true"
            android:padding="@dimen/_7sdp"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:shadowDy="20"/>
        <com.vibescom.kutanga.View.PMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreeTerams"
            android:textColor="@color/dim_grey"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:textSize="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <com.vibescom.kutanga.View.PMTextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <com.vibescom.kutanga.View.PMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_an_account"
                android:textColor="@color/dim_grey"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"/>
            <com.vibescom.kutanga.View.PMTextView
                android:id="@+id/txt_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:text="@string/sign_in"
                android:textColor="@color/light_pink"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
    </LinearLayout>


    </RelativeLayout>

</ScrollView>