<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/canvas_round_corner_white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@string/app_desc"
            android:src="@drawable/color_lock" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:orientation="vertical">

            <com.vibescom.kutanga.View.PMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/forgot_your_password"
                android:textAllCaps="false"
                android:textColor="@color/color_signIn"
                android:textSize="@dimen/_14sdp" />

            <com.vibescom.kutanga.View.PMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/no_warries"
                android:textAllCaps="false"
                android:textColor="@color/yellow"
                android:textSize="@dimen/_12sdp" />

            <com.vibescom.kutanga.View.PMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_35sdp"
                android:gravity="center"
                android:text="@string/forgot_password_desc"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/_12sdp" />



            <com.vibescom.kutanga.View.PREditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/canvas_forgot_editext_bg"
                android:hint="@string/registered_email_id"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/dim_black"
                android:textColorHint="@color/dark_grey"
                android:textSize="@dimen/_12sdp" />
            <com.vibescom.kutanga.View.PMButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/canvas_forgot_btn_bg"
                android:text="@string/forgot_submit"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_close"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:src="@drawable/ic_close"
            android:tint="@color/theme_color" />


    </RelativeLayout>

</RelativeLayout>