<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_10sdp"
    android:gravity="center"
    android:id="@+id/item"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/canvas_round_corner_white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_congrats"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@drawable/tick_mark"
                android:tint="@color/theme_color"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name" />
            <com.vibescom.kutanga.View.PMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/congrats"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_16sdp"/>
            <com.vibescom.kutanga.View.PMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/success_register"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:textColor="@color/half_black"
                android:textSize="@dimen/_12sdp"/>
            <com.vibescom.kutanga.View.PMButton
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/canvas_otp_btn_bg"
                android:layout_gravity="center"
                android:text="@string/click_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:gravity="center"/>
        </LinearLayout>
</RelativeLayout>