<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_10sdp"
    android:gravity="center"
    android:id="@+id/item"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/canvas_round_corner_white"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical">

            <com.vibescom.kutanga.View.PMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center"
                android:text="@string/otp"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/_16sdp"
                android:textAllCaps="false"/>

            <com.vibescom.kutanga.View.PMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/sent_verification"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textColor="@color/half_black"
                android:textSize="@dimen/_10sdp"/>

            <com.mukesh.OtpView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number"
                android:itemBackground="@color/light_grey"
                android:padding="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/theme_color"
                app:cursorColor="@color/theme_color"
                app:itemCount="4"
                app:itemHeight="@dimen/_30sdp"
                app:itemRadius="@dimen/_10sdp"
                app:itemWidth="@dimen/_40sdp"
                app:viewType="rectangle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:gravity="end">

                <com.vibescom.kutanga.View.PRTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/expire_otp"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/_11sdp"/>

                <com.vibescom.kutanga.View.PRTextView
                    android:id="@+id/tv_otp_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/timer_txt"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/_11sdp"/>

            </LinearLayout>
            <com.vibescom.kutanga.View.PMButton
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/canvas_otp_btn_bg"
                android:layout_gravity="center"
                android:text="@string/click_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/btn_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_gravity="center"
                android:text="@string/resend"
                android:textColor="@color/theme_color"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/_5sdp"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_close"></ImageView>
</RelativeLayout>